--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,5 +1,6 @@
 <h1><%= @pin.title %></h1>
 <p><%= @pin.description %></p>
+<p>Submitted By: <%= @pin.user.email %></p>
 
 <%= link_to 'Back', root_path %>
 <%= link_to 'Edit', edit_pin_path %>
