--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!! 5
 %html
 %head
-  %title Pin Board
+  %title Chef's Circle
   = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
   = javascript_include_tag 'application', 'data-turbolinks-track' => true
   = csrf_meta_tags
@@ -9,11 +9,11 @@
 %body
   %nav.navbar.navbar-default
     .container
-      .navbar-brand= link_to "Pin Board", root_path
+      .navbar-brand= link_to "Chef's Circle", root_path
 
       - if user_signed_in?
         %ul.nav.navbar-nav.navbar-right
-          %li= link_to "New Pin", new_pin_path
+          %li= link_to "Add A Recipe", new_pin_path
           %li= link_to "Account", edit_user_registration_path
           %li= link_to "Sign Out", destroy_user_session_path, method: :delete
       - else
