Add ingredients comlumn

--- a/app/views/pins/show.html.haml
+++ b/app/views/pins/show.html.haml
@@ -5,6 +5,7 @@
         = image_tag @pin.image.url
       .panel-body
         %h1= @pin.title
+        %p.description= @pin.ingredients
         %p.description= @pin.description
       .panel-footer
         .row
