--- a/app/views/pins/_form.html.haml
+++ b/app/views/pins/_form.html.haml
@@ -14,4 +14,6 @@
     = f.input :title, input_html: { class: 'form-control' }
   .form-group
     = f.input :description, input_html: { class: 'form-control' }
+  .form-group
+    = f.input :ingredients, input_html: { class: 'form-control' }
   = f.button :submit, class: 'btn btn-primary'
