--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,13 +13,13 @@
 
       - if user_signed_in?
         %ul.nav.navbar-nav.navbar-right
-          %li= link_to "Add A Recipe", new_pin_path
-          %li= link_to "Account", edit_user_registration_path
-          %li= link_to "Sign Out", destroy_user_session_path, method: :delete
+          %li= link_to '<i class="glyphicon glyphicon-plus"></i>'.html_safe, new_pin_path
+          %li= link_to '<i class="glyphicon glyphicon-cog"></i>'.html_safe, edit_user_registration_path
+          %li= link_to '<i class="glyphicon glyphicon-off"></i>'.html_safe,  destroy_user_session_path, method: :delete
       - else
         %ul.nav.navbar-nav.navbar-right
-          %li= link_to "Sign Up", new_user_registration_path
-          %li= link_to "Sign In", new_user_session_path
+          %li= link_to '<i class="glyphicon glyphicon-plus"></i>'.html_safe, new_user_registration_path
+          %li= link_to '<i class="glyphicon glyphicon-user"></i>'.html_safe, new_user_session_path
   .container
     - flash.each do |name, msg|
       = content_tag :div, msg, class: "alert alert-info"
